--- a/Secondpage.html
+++ b/Secondpage.html
@@ -70,7 +70,7 @@
         
         <div class="row">
             <div class="col-md-6">
-                <p class="Words"> 2016 Jesus Rodriguez / Privacy / Help </p>
+                <p class="Words"> 2016 By: Jesus Rodriguez / Privacy / Help </p>
             </div>
             <div class="col-md-6">
                 <p class="Words2"> Terms & Services / Security Status</p>
