--- a/Secondpage.html
+++ b/Secondpage.html
@@ -10,7 +10,7 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Secondpage.css">
+    <link rel="stylesheet" href="/css/Secondpage.css">
 </head>
 <body>
     
@@ -18,15 +18,15 @@
         <div class="top">
             <div class="row">
                 <div class="name">
-                    <img src="http://res.cloudinary.com/goodsearch/image/upload/v1416509960/hi_resolution_merchant_logos/nike_coupons.png" height="180" width="450">
+                    <img src="/images/Logo.jpg" height="180" width="450">
                 </div>
             </div>
             <div class="row">
                 <div>
                     <ul class="nav nav-tabs">
                         <li role="presentation"><a href="index.html">Home</a></li>
-                        <li role="presentation" class="active"><a href="Secondpage.html">Apparel and shoes </a></li>
-                        <li role="presentation"><a href="Sponsors.html">Sponsors </a></li>
+                        <li role="presentation" class="active"><a href="/pages/Secondpage.html">Apparel and shoes </a></li>
+                        <li role="presentation"><a href="/pages/Sponsors.html">Sponsors </a></li>
                     </ul>
                 </div> 
             </div>
@@ -40,17 +40,17 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="shoes">
-                    <img src="http://www.soccersus2015.com/pic/New-Nike-Indoor-Soccer-Shoes-2016-MagistaX-Proximo-IC-black-blue-white---1-5421-52027.jpg"height="440" width="340">
+                    <img src="/images/Shoes.jpg"height="440" width="340">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="sweater">
-                    <img src="http://images.eastbay.com/pi/12519010/large/nike-club-half-zip-fleece-hoodie-mens" height="440" width="340">
+                    <img src="/images/Sweater.jpg" height="440" width="340">
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="shoesss">
-                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZDms1ybCmD0mIIVExLbdpUvsH-1-sqh3uHe2sPcGBoSKs50eIkA" height="440" width="340">
+                   <img src="/images/Second-shoes.jpg" height="440" width="340">
                 </div>
             </div>
         </div>
