--- a/Sponsors.html
+++ b/Sponsors.html
@@ -10,14 +10,14 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="Sponsors.css">
+    <link rel="stylesheet" href="/css/Sponsors.css">
 </head>
 <body>
     <div class="container">
         <div class="top">
             <div class="row">
                 <div class="name">
-                    <img src="http://res.cloudinary.com/goodsearch/image/upload/v1416509960/hi_resolution_merchant_logos/nike_coupons.png" height="180" width="450">
+                    <img src="/images/Logo.jpg" height="180" width="450">
                 </div>
             </div>
             <div class="row">
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="sponsor">
-                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRi-ngjWftTmMvWOxKMCno1hCS7Xgk67HLsAd32rHW8sroHx4dZ"height="440" width="340">
+                    <img src="/images/Neymar.jpg"height="440" width="340">
                     <div>
                         <p class="them"> Neymar Jr. </p>
                     </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="col-md-4">
                 <div class="sponsor">
-                    <img src="http://gaia.adage.com/images/bin/image/x-large/20151207_LeBronJames_crNike.jpg" height="440" width="340">
+                    <img src="/images/LB.jpg" height="440" width="340">
                     <div>
                         <p class="them"> Lebron James </p>
                     </div>
