--- a/Sponsors.html
+++ b/Sponsors.html
@@ -23,9 +23,9 @@
             <div class="row">
                 <div>
                     <ul class="nav nav-tabs">
-                        <li role="presentation" ><a href="index.html">Home</a></li>
-                        <li role="presentation"><a href="Secondpage.html">Apparel and shoes </a></li>
-                        <li role="presentation" class="active"><a href="Sponsors.html">Sponsors </a></li>
+                        <li role="presentation" ><a href="/pages/index.html">Home</a></li>
+                        <li role="presentation"><a href="/pages/Secondpage.html">Apparel and shoes </a></li>
+                        <li role="presentation" class="active"><a href="/pages/Sponsors.html">Sponsors </a></li>
                     </ul>
                 </div> 
             </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-md-4">
                 <div class="sponsor">
-                   <img src="http://www.walldevil.com/wallpapers/a73/wallpaper-thibaut-iphone-woods-images-tiger.jpg" height="440" width="340">
+                   <img src="/images/Woods.jpg" height="440" width="340">
                     <div>
                         <p class="them"> Tiger Woods </p>
                     </div>
